        Class Example<dim>, ExampleLink, ExampleSnapPea:
            - All examples now return by value, not by newly allocated pointer.
        Class Example<3>:
            - All of the changes from Example<dim> described above.
            - Renamed poincareHomologySphere() to poincare().  The old name
              is kept but deprecated.
            - Added sfsOverSphere() and layeredLoop().
        Class Face<dim, subdim>:
            - New compile-time constants allowsNonOrientableLinks and
              allowsInvalidFaces.
            - Simplified the class hierarchy; FaceOrientability, FaceValidity,
              FaceListHolder and FaceStorage are all now gone.
            - New compile-time constants dimension and subdimension.
            - For those faces that have a buildLink() function, this now
              returns by const reference instead of const pointer.
              Also, buildLinkDetail() has been renamed buildLinkInclusion();
              the old name is removed entirely.  This now returns just an
              isomorphism by value: the triangulation should be fetched via
              buildLink(), and the labelling option is gone.
            - New routine embeddings(), as a more readable alternative to
              iterating over the face itself.
        Class FaceEmbedding<dim, subdim>:
            - Local copies of these objects can now happily outlive their
              underlying faces.  This is because they now carry their entire
              embedding permutations with them.  This change actually shrinks
              the object size in Regina's standard dimensions, and it also
              speeds up calls to vertices(), but it does marginally slow
              down calls to face().
            - The equality/inequality tests have changed meaning: not only do
              the face *numbers* need to be the same, but the entire embedding
              permutations returned by vertices() need to be the same.