@@ -53,6 +53,8 @@ void addExample4(pybind11::module_& m) {
         .def_static("fourSphere", &Example<4>::fourSphere)
         .def_static("simplicialFourSphere", &Example<4>::simplicialFourSphere)
         .def_static("rp4", &Example<4>::rp4)
+        .def_static("cp2", &Example<4>::cp2)
+        .def_static("s2xs2", &Example<4>::s2xs2)
         .def_static("s3xs1", &Example<4>::s3xs1)
         .def_static("s3xs1Twisted", &Example<4>::s3xs1Twisted)
         .def_static("cappellShaneson", &Example<4>::cappellShaneson)
